# solana-invoke

./: Cargo.toml  README.md
invoke/: Cargo.toml
invoke/src/: instruction_stabilizer.rs  lib.rs
test-program/: Cargo.toml
test-program/src/: lib.rs
