[package]
name = "test-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "triple_transfer"

[dependencies]
solana-program = "2.1"
solana-invoke = { workspace = true }

[dev-dependencies]
solana-program-test = "2.1"
solana-sdk = "2.1"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
